Fixed additional word wrapping with code blocks, moved window-style footer into snippet (now gets injected), adjusted footer to better handle small screens.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -78,6 +78,9 @@ code {
   margin: 0;
   line-height: 1.5rem;
   color: #73d0ff;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  overflow: auto;
 }
 
 figure {
@@ -135,4 +138,18 @@ img {
 .reading-time {
   color: #d5ff80;
   font-size: 0.9em;
+}
+
+.flavour-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #8A9199CC;
+  font-size: medium;
+}
+
+.top-text {
+  white-space: nowrap;
+  overflow: visible;
+  padding-right: 1rem;
 }
